# LENS_API

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  sql_app.db  user.db
.aws/: task-definition.json
.github/workflows/: aws.yml  task-definition.json
app/: main.py  test_llm.py  test_request.py  user.db
app/api/: database.py  execute_query.py  llm.py  order.py  schemas.py
app/api/v1/: dependencies.py  routers.py
app/api/v1/endpoints/: history.py  llm.py  llm.py.backup  order.py  query.py  table.py  user.py
app/core/: authenticate.py  config.py  jwt.py  llm.py  security.py  store.py
app/db/: crud.py  database.py  models.py  schemas.py  session.py
app/tests/: test_llm.py
app/user/auth/: authenticate.py  jwt.py
app/user/database/: connection.py
app/user/models/: users.py
app/user/routes/: users.py
lambda-docker-fastapi/: Dockerfile  pyproject.toml
lambda-docker-fastapi/app/: main.py  sql_app.db
lambda-docker-fastapi/app/api/: database.json  schemas.py
lambda-docker-fastapi/lens-lambda-fastapi/: serverless.yml
lambda-docker-fastapi/python/: pyproject.toml
lambda-docker-fastapi/python/app/: Dockerfile  main.py  sql_app.db
lambda-docker-fastapi/python/app/api/: crud.py  database.py  models.py  schemas.py
myenv/: pyvenv.cfg
