[tool.poetry]
name = "lens_api"
version = "0.1.0"
description = ""
authors = ["YoungWoongPark <assayw119@naver.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.111.0"
mangum = "^0.17.0"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
